added all but one sprite

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <h3 class="text-input">select box - open</h3>
       <select id="select1">
         <option class="option-boxes" value="option"></option>
-        <option class="option-boxes" value="option1">option 1</option>
+        <option class="option-boxes odd-options" value="option1">option 1</option>
         <option class="option-boxes" value="option2">option 2</option>
-        <option class="option-boxes" value="option3">option 3</option>
+        <option class="option-boxes odd-options" value="option3">option 3</option>
         <option class="option-boxes" value="option4">option 4</option>
-        <option class="option-boxes" value="option5">option 5</option>
+        <option class="option-boxes odd-options" value="option5">option 5</option>
       </select>
 
     </form>
